2009-03-02  Shaun McCance  <shaunm@gnome.org>

	* configure.in:
	* NEWS:
	- Version 2.25.1

2009-03-01  Shaun McCance  <shaunm@gnome.org>

	* configure.in:
	* src/yelp-toc.c:
	* stylesheets/toc2html.xsl:
	* stylesheets/toc2html.xsl.in:
	* stylesheets/Makefile.am:
	- RTL fixes for bug #573159

2009-03-01  Christian Persch  <chpe@gnome.org>

	* configure.in: Treat libxul and libxul-embedding the same as far as the
	MOZILLA_COMPONENT pkg-config check is concerned.

2009-03-01  Christian Persch  <chpe@gnome.org>

	* m4/gecko.m4: Fix libxul[-embedding] detection.

2009-02-25  Thomas H.P. Andersen  <phomes@gmail.com>

	* src/yelp-base.c (yelp_base_init):
	* src/yelp-settings.c (settings_update):
	* src/yelp-window.h:
	* src/yelp-html.h:
	Replace deprecated gtk symbols. Bug #571868

2009-02-25  Andre Klapper  <a9016009@gmx.de>

	* src/yelp-search-parser.c (search_clean_snippet):
	Fix crash. Patch by Antonio Litterio. Fixes bug #552947.

2008-12-23  Josselin Mouette  <joss@malsain.org>

	* src/yelp-window.c: (window_do_load_html):
	- Load local files with g_file_new_for_path.
	- Do not loop endlessly over the end of file while
          reading it.
	Fixes bug #562137 - fails to load local HTML files

== 2.24.0 ==

2008-09-22  Don Scorgie  <dscorgie@svn.gnome.org>

	* NEWS: 
	* configure.in:
	Version 2.24.0

2008-09-15  Don Scorgie  <dscorgie@svn.gnome.org>

	* yelp.desktop.in.in:
	Add yelp to the "Documentation" fd.o category
	part of bug #552128

2008-09-15  Don Scorgie  <dscorgie@svn.gnome.org>

	* src/yelp-document.c (request_idle_final):
	Fix potential crasher on multi-core machines
	bug #551757 -  Joe Marcus Clarke

2008-09-15  Don Scorgie  <dscorgie@svn.gnome.org>

	* src/yelp-html.cpp:
	Improved a11y under gecko 1.9
	- Yet more work on bug #545162 from Ginn Chen

2008-09-11  Don Scorgie  <dscorgie@svn.gnome.org>

	* src/yelp-html.cpp:
	Reinstate previous timeout workaround as it's still required

2008-09-11  Don Scorgie  <dscorgie@svn.gnome.org>
